tests/invalid/ann_assign_empty_dict_non_dict_annotation/main.py
def run_case() -> None:
    x: int = {}
    print(x)


if __name__ == "__main__":
    run_case()
